--- a/layouts/index.html
+++ b/layouts/index.html
@@ -39,7 +39,7 @@
 
 {{ define "main" }}
   <main
-    class="pf-c-page__main pf-c-page__main--with-overlay pf-c-page__main--index pf-x-u-blur  {{ if or .Site.Params.effects.fireworks .Site.Params.effects.snowfall }}
+    class="pf-c-page__main pf-c-page__main--with-overlay pf-c-page__main--index pf-x-u-blur  {{ if or .Site.Params.effects.fireworks .Site.Params.effects.snowfall .Site.Params.effects.rainfall }}
       pf-c-page__main--with-effects{{ if not .Site.Params.effects.blur }}
         pf-c-page__main--with-effects--without-blur
       {{ end }}
