--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -108,7 +108,7 @@
               {{ range .Site.Data.links.navbar }}
                 <a
                   href="{{ .link }}"
-                  target="_blank"
+                  {{ if .newTab }}target="_blank"{{ end }}
                   rel="noopener"
                   class="pf-c-button pf-c-button--header pf-x-u-text-shadow-sm pf-m-plain pf-u-ml-2xl--first-child"
                 >
