fix: Align person description correctly

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -60,7 +60,9 @@
         >
           {{ .Site.Data.person.name }}
         </h1>
-        <p class="pf-x-u-text-shadow-sm pf-x-u-text--freestanding">
+        <p
+          class="pf-x-u-text-shadow-sm pf-x-u-text--freestanding pf-x-u-text--center"
+        >
           {{ .Site.Data.person.description }}
         </p>
       </div>
