fix: Prevent breaking card headers from breaking on small screen widths

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -218,7 +218,7 @@
                             >
                               <div class="pf-c-card__header">
                                 <div
-                                  class="pf-c-card__header-main pf-u-w-100 pf-u-display-flex pf-u-align-items-center pf-u-justify-content-space-between pf-u-flex-direction-column pf-u-flex-direction-row-on-sm"
+                                  class="pf-c-card__header-main pf-u-w-100 pf-u-display-flex pf-u-align-items-center pf-u-justify-content-space-between pf-u-flex-direction-column pf-u-flex-direction-row-on-sm pf-x-u-overflow-x-auto pf-x-u-white-space-nowrap"
                                 >
                                   <div
                                     class="pf-c-card__title pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center"
@@ -226,7 +226,7 @@
                                     <span class="pf-u-mr-sm">{{ .title }}</span>
                                   </div>
                                   <div
-                                    class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-font-size-sm"
+                                    class="pf-u-display-flex pf-u-align-items-center pf-u-justify-content-center pf-u-font-size-sm pf-u-ml-sm"
                                   >
                                     <i
                                       class="fas fa-calendar-alt"
